--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/styled-components": "^4.0.3",
     "apollo-boost": "^0.1.17",
     "global": "^4.3.2",
     "graphql": "^14.0.2",
@@ -13,7 +14,9 @@
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "styled-components": "^4.0.3",
+    "styled-reset": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +36,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-3": "^6.24.1"
+    "babel-preset-stage-3": "^6.24.1",
+    "@types/styled-components": "^4.0.3"
+
   }
 }
